source/docs/en/1.10.0/workflow/select-preset.markdown
---
Type:            article
Title:           Selecting a preset
Project:         HandBrake
Project_URL:     https://handbrake.fr/
Project_Version: 1.10.0
Language:        English
Language_Code:   en
Authors:         [ Bradley Sepos <bradley@bradleysepos.com> (BradleyS) ]
Copyright:       2024 HandBrake Team
License:         Creative Commons Attribution-ShareAlike 4.0 International
License_Abbr:    CC BY-SA 4.0
License_URL:     https://handbrake.fr/docs/license.html
---

Selecting a preset
==================

A `Preset` is a group of settings specifically tailored for the software or device you want your videos to play on. Selecting a `Preset` can go a long way toward ensuring your video works where you want it to.

## Official presets

HandBrake includes a number of official `Presets` for specific devices and for general use.

Once you've opened a `Source`, select the `Preset` that most closely describes the device you want your videos to work on. For instance, if you want to play your videos on a Roku that supports 1080p High Definition, choose the `Roku 1080p30 Surround` preset under `Devices`. See the technical documentation for more information about [official presets](../technical/official-presets.html).

<!-- .system-linux -->

<!-- TODO: Linux figures. -->

<!-- /.system-linux -->
<!-- .system-macos -->

![Selecting a preset](../../images/mac/preset-selection-1.1.0.png "Presets are one-click settings to save you time and help ensure compatibility with your devices.")

<!-- /.system-macos -->
<!-- .system-windows -->

<!-- TODO: Windows figures. -->

<!-- /.system-windows -->

If your device is not listed, or you wish to play your videos on a computer, the default `Fast 1080p30` preset is a good choice. It's fast and compatible across a wide range of software and devices.

## Custom presets

If you've previously saved one of your own `Presets`, you may select it in the same way as the official `Presets`.

You can learn more about [Custom presets](../advanced/custom-presets.html) in the advanced features section.


## Setting a Default preset

If you find you commonly use a preset, you can set it to be HandBrakes default preset when the application starts.

To do this, you can choose the "Make Default" (macOS and Linux) or "Set Current as Default" (Windows) option in the presets menu or by using the preset manager accessed via the toolbar.

<!-- /.system-macos -->


<!-- .continue -->

## Next steps

<!-- .success -->

Continue to [Adjusting quality](adjust-quality.html).

<!-- /.success -->

<!-- /.continue -->
